--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
               <!-- <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button" id="botonIngresaNuevo" onclick="focusInit()">Ingresar Nuevo Monto </a> -->
             <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button" id="botonIngresaNuevo" onclick="focusInit()">Ingresar Nuevo Monto</a>
-            <input class="btn btn-warning" type="button" onclick="elimina()" value="Elimina monto">
+            <input class="btn btn-warning" type="button" onclick="refrescaPagina()" value="Limpiar">
         </section>
     </main>
     <footer>
